Bug 327651 - Reconnecting after network error
Summary: Reconnecting after network error
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Core (other bugs)
Version First Reported In: git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Trojita default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-15 13:34 UTC by Jan Kundrát
Modified: 2014-05-28 10:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2013-11-15 13:34:21 UTC
Presently, any form of network error causes Trojita to go offline. This can be annoying when on e.g. a flaky WiFi. It would be cool to have some support for "smart reconnecting", i.e. trying to reconnect when the connection was dropped etc.
Comment 1 Jan Kundrát 2014-05-28 10:23:28 UTC
Git commit 7708aaa7fda2877a868a542e9a1335683c9cbdb7 by Jan Kundrát, on behalf of Karan Luthra.
Committed on 11/05/2014 at 11:13.
Pushed by jkt into branch 'master'.

Make attempts to reconnect after a network error

After switching to offline mode due to a network error, the model tries to
reconnect repeatedly, with increasing timeouts.  This is done until either
trojita gets a working connecton, or reconnect attempts are aborted by choosing
network:offline in the menu.
REVIEW: 118079

M  +31   -4    src/Gui/Window.cpp
M  +6    -0    src/Gui/Window.h
M  +1    -0    src/Imap/Model/Model.h
M  +46   -0    src/Imap/Model/NetworkWatcher.cpp
M  +19   -0    src/Imap/Model/NetworkWatcher.h

http://commits.kde.org/trojita/7708aaa7fda2877a868a542e9a1335683c9cbdb7