Make attempts to reconnect after a network error

After switching to offline mode due to a network error, the model tries to
reconnect repeatedly, with increasing timeouts.  This is done until either
trojita gets a working connecton, or reconnect attempts are aborted by choosing
network:offline in the menu.

BUG: 327651
REVIEW: 118079